--- a/Covid_SQL.html
+++ b/Covid_SQL.html
@@ -50,14 +50,14 @@
             <h2> Covid Query </h2>
             <p class="centrado"> In today's world, DATA-DRIVEN DECISION-MAKING HAS BECOME AN ESSENTIAL PART OF ALL ASPECTS OF SPORTS AND BUSINESS. 
                 That's why this analysis aims to provide an in-depth view of the passes performance of the Argentine national team during the final of the 2022 FIFA World Cup,
-                where they faced the French national team.</p>
+                where they faced the French national team.<br>2</br></p>
          </div>
     </section>   
 
      <!-- SECCION PORTFOLIO -->
      <section id="portfolio" class="portfolio">
         <div class="galeria">
-            <iframe src="https://raw.githack.com/Jonathan-Aponte/portfolio/main/CovidPortafolio/Covid.sql" width="100%" height="400"></iframe>
+            <iframe src="https://raw.githack.com/Jonathan-Aponte/portfolio/CovidPortafolio/Covid.sql" width="100%" height="400"></iframe>
         </div>
      </section>
 
